--- a/database/Parabase/css/home.css
+++ b/database/Parabase/css/home.css
@@ -40,7 +40,7 @@ a {
     color: #205493;
     text-decoration: underline; }
   a:visited {
-    color: #4c2c92; }
+    color: #0071bc; }
   a:focus {
     box-shadow: 0 0 3px #3e94cf, 0 0 7px #3e94cf;
     outline: 0; }
@@ -572,6 +572,7 @@ a.prksLink:focus {
   font-size: 24px;
 }
 
+
 .links.section > ul {  
   padding-left:0;
 }
@@ -644,7 +645,7 @@ input.orgHint
 
 #type-d #content
 {
-    background-color:White;
+    
     padding:0;
     margin-bottom:1em;
 }
@@ -677,3 +678,123 @@ input.orgHint
 }
 
 #page_header{border-bottom: 1px solid #999;}
+.page{
+  max-width: 60em;
+  margin: 0 auto;
+}
+table th,
+table td{
+  text-align: left;
+}
+table.layout{
+  width: 100%;
+  border-collapse: collapse;
+}
+word1 {
+overflow:hidden;
+white-space: nowrap;
+text-overflow: ellipsis;
+}
+table.display{
+  margin: 1em 0;
+}
+table.display th,
+table.display td{
+  border: 1px solid #B3BFAA;
+  padding: .5em 1em;
+}
+tbody {
+    display: table-row-group;
+    vertical-align: middle;
+    border-color: inherit;
+}
+
+
+table.display th{ background: #4498d4; }
+table.display td{ background: #fff; }
+
+table.responsive-table{
+  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.2);
+}
+tr {
+    display: table-row;
+    vertical-align: inherit;
+    border-color: inherit;
+}
+div#our_info{
+     position: relative; top: -250px;
+}
+@media only screen and (max-width: 825px){
+    div.col-md-3{
+      display:none;
+    }
+    div#our_info{
+      position:relative;
+      top:90px;
+    }
+}
+/*
+@media (max-width: 30em){
+    table.responsive-table{
+      box-shadow: none;  
+    }
+    table.display {
+    margin: 1em 0;
+    }
+    table.layout {
+    width: 100%;
+    border-collapse: collapse;
+    }
+    table.responsive-table thead{
+      display: none; 
+    }
+  table.display th,
+  table.display td{
+    padding: .5em;
+
+  }
+    
+  table.responsive-table td:nth-child(1):before{
+    content: 'Number';
+  }
+  table.responsive-table td:nth-child(2):before{
+    content: 'Name';
+  }
+  table.responsive-table td:nth-child(1),
+  table.responsive-table td:nth-child(2){
+    padding-left: 25%;
+    margin-top: .5em;
+    margin-bottom: .5em;
+  }
+  table.responsive-table td:nth-child(1):before,
+  table.responsive-table td:nth-child(2):before{
+    position: absolute;
+    left: .5em;
+    font-weight: bold;
+  }
+  
+    table.responsive-table tr,
+    table.responsive-table td{
+        display: block;
+    }
+    table.responsive-table tr{
+        position: relative;
+        margin-bottom: 1em;
+    box-shadow: 0 1px 10px rgba(0, 0, 0, 0.2);
+    }
+    table.responsive-table td{
+        border-top: none;
+    }
+    table.responsive-table td.organisationnumber{
+        background: #D5E0CC;
+        border-top: 1px solid #B3BFAA;
+    }
+    table.responsive-table td.actions{
+        position: absolute;
+        top: 0;
+        right: 0;
+        border: none;
+        background: none;
+    }
+}
+*/
